2021-08-05  Danilo Chang

	* Bump version to v0.4
	* Call Vectcl_InitStubs in Opencl_Init

2021-08-04  Danilo Chang

	* Bump version to v0.3
	* Update and fix version check for clCreateImage

2021-08-03  Danilo Chang

	* Bump version to v0.2
	* enqueueNDRangeKernel parameters changed
	* setKernelArg will accept buffer and image, changed from mem
	* Implement ::opencl::createImage command
	* generic/tclopencl.c: Use long type to get length

2021-08-01  Danilo Chang

	* README.md: Add examples
	* VecTcl NumArray_Int type is long int, update code to handle it

2021-07-31  Danilo Chang

	* configure.ac: Try to find vectcl then use it
	* Implement ::opencl::createKernel command
	* Implement ::opencl::createProgramWithBinary command
	* Implement ::opencl::createProgramWithSource command

2021-07-30  Danilo Chang

	* Implement ::opencl::createCommandQueue command
	* Implement ::opencl::createContext command

2021-07-29  Danilo Chang

	* Implement ::opencl::getDeviceID command
	* Implement ::opencl::getPlatformID command

2021-07-27  Danilo Chang

	* Update package name to opencl
	* Dump sample extension
