@@ -1,3 +1,7 @@
+2021-08-14  Danilo Chang
+
+	* Add related code to support CL_A format
+
 2021-08-05  Danilo Chang
 
 	* Bump version to v0.4
